# TrafficAnalyzer

./: .gitignore  CMakeLists.txt  README.md
config/: log4cplus-config.ini
src/: CMakeLists.txt  http_packet_stat.cpp  http_packet_stat.hpp  log4cplus_configure  main.cpp
tests/: CMakeLists.txt  func.cpp  http_packet_stat_test.cpp  main_test.cpp  reader.cpp  test_http_dump.pcap  test_http_dump.pcapng
